# tinycrm

./: .gitignore  LICENSE  README.md  TinyCRM.cabal  package-lock.json  package.json  stack.yaml
app/: MigrateDB.hs  TinyCRM.hs
client/: package-lock.json  package.json
client/config/: webpack.config.dev.js  webpack.config.prod.js
client/src/: App.js  App.scss  index.js
client/src/actions/: index.js
client/src/components/: Explore.js  User.js
client/src/containers/: App.js  Root.dev.js  Root.prod.js  UserDetailPage.js  UserListPage.js  UserPage.js
client/src/middleware/: api.js
client/src/reducers/: index.js
server/: TinyCRM.cabal
server/src/: API.hs  Database.hs  Schema.hs
src/: API.hs  Database.hs  Logger.hs  Schema.hs
