name:                TinyCRM
version:             0.1.0.0
homepage:            https://mattwestrik.com
author:              Matthew Westrik
maintainer:          m@ttwestrik.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
    API
    Database
    Schema
    Logger
  build-depends:       
    base >= 4.7 && < 5
    , aeson
    , esqueleto
    , monad-logger
    , mtl
    , persistent
    , persistent-postgresql
    , persistent-template
    , servant
    , servant-client
    , servant-server
    , transformers
    , text
    , time
    , warp
    , wai-cors
    , hedis
    , bytestring
  default-language:    Haskell2010

executable migrate-db
  hs-source-dirs:      app
  main-is:             MigrateDB.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , TinyCRM
  default-language:    Haskell2010

executable tinycrm
  hs-source-dirs:      app
  main-is:             TinyCRM.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , TinyCRM
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/westrik/crm
