name:                TinyCRM
version:             0.1.0.0
homepage:            https://mattwestrik.com
author:              Matthew Westrik
maintainer:          m@ttwestrik.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
    API
    Database
    Schema
  build-depends:       
    base >= 4.7 && < 5
    , aeson
    , esqueleto
    , monad-logger
    , mtl
    , persistent
    , persistent-postgresql
    , persistent-template
    , servant
    , servant-client
    , servant-server
    , transformers
    , text
    , time
    , warp
    , hedis
    , bytestring
  default-language:    Haskell2010

executable migrate-db
  hs-source-dirs:      app
  main-is:             MigrateDB.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , TinyCRM
  default-language:    Haskell2010

executable tinycrm
  hs-source-dirs:      app
  main-is:             TinyCRM.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , TinyCRM
  default-language:    Haskell2010

test-suite api-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  other-modules:
    TestUtils
  main-is:             APITests.hs
  build-depends:       
    base
    , hspec
    , http-client
    , http-client-tls
    , monad-logger
    , mtl
    , servant-client
    , time
    , persistent-postgresql
    , TinyCRM
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/westrik/crm
